<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <LinearLayout style="@style/container" >

            <TextView
                style="@style/attr_label"
                android:text="@string/hp" />

            <TextView
                android:id="@+id/hp_current"
                style="@style/partial_value" />
        </LinearLayout>

        <LinearLayout style="@style/container" >

            <TextView
                style="@style/attr_label"
                android:text="@string/hp_temp" />

            <TextView
                android:id="@+id/hp_current_temp"
                style="@style/partial_value" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <Button
            style="@style/attr_button"
            android:text="@string/hp_button_damage" />

        <Button
            style="@style/attr_button"
            android:text="@string/hp_button_heal" />

        <Button
            style="@style/attr_button"
            android:text="@string/hp_button_temp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <LinearLayout style="@style/container" >

            <TextView
                style="@style/attr_label"
                android:text="@string/hp_surges" />

            <TextView
                android:id="@+id/surge_number"
                style="@style/partial_value" />
        </LinearLayout>

        <Button
            style="@style/attr_button"
            android:text="@string/hp_surges_regain" />

        <Button
            style="@style/attr_button"
            android:text="@string/hp_surges_expend" />
    </LinearLayout>

</LinearLayout>