<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    
    <LinearLayout style="@style/container">

        <TextView
            style="@style/attr_label"
            android:text="@string/def_ac" />

        <TextView
            android:id="@+id/ac_defense"
            style="@style/attr_value" />
    </LinearLayout>


    <LinearLayout style="@style/container">

        <TextView
            style="@style/attr_label"
            android:text="@string/def_fort" />

        <TextView
            android:id="@+id/fort_defense"
            style="@style/attr_value" />
    </LinearLayout>

    <LinearLayout style="@style/container">

        <TextView
            style="@style/attr_label"
            android:text="@string/def_ref" />

        <TextView
            android:id="@+id/ref_defense"
            style="@style/attr_value" />
    </LinearLayout>

    <LinearLayout style="@style/container">

        <TextView
            style="@style/attr_label"
            android:text="@string/def_will" />

        <TextView
            android:id="@+id/will_defense"
            style="@style/attr_value" />
    </LinearLayout>

</LinearLayout>
